Use ak/var everywhere